<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mboydston.bottlerockettest.ListItem">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_below="@id/logo_imageView"/>

    <TextView
        android:id="@+id/address_string_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textView"
        android:text="@string/address_string"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/address_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textView"
        android:layout_toRightOf="@id/address_string_textView"
        android:paddingLeft="3dp"/>
    <TextView
        android:id="@+id/phone_string_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_textView"
        android:text="@string/phone_string"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/phone_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_textView"
        android:layout_toRightOf="@id/phone_string_textView"
        android:paddingLeft="3dp"/>


    <TextView
        android:id="@+id/storeID_string_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_textView"
        android:text="@string/storeID_string"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/storeID_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_textView"
        android:layout_toRightOf="@id/storeID_string_textView"
        android:paddingLeft="3dp"/>


    <TextView
        android:id="@+id/latitude_string_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/storeID_string_textView"
        android:text="@string/latitude_string"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/latitude_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/storeID_textView"
        android:layout_toRightOf="@id/latitude_string_textView"
        android:paddingLeft="3dp"/>

    <TextView
        android:id="@+id/longitude_string_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitude_string_textView"
        android:text="@string/longitude_string"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/longitude_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitude_textView"
        android:layout_toRightOf="@id/longitude_string_textView"
        android:paddingLeft="3dp"/>




</RelativeLayout>
